# aws_rust

./: .gitignore  2h_test.js  5min_test.js  6h_test.js  Cargo.toml  README.md  aws_lambda_cli.sh  test.js
src/: main.rs
