[package]
name = "aws_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.5.4"
aws-sdk-s3 = "1.40.0"
aws-sdk-dynamodb = "1.37.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
